add get languages method
