# _docs/swagger/swagger.json
@@ -204,6 +204,32 @@
                 }
             }
         },
+        "/languages": {
+            "get": {
+                "description": "Get list of all languages",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "languages"
+                ],
+                "summary": "Get languages",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/language.getLanguagesResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.ErrorStruct"
+                        }
+                    }
+                }
+            }
+        },
         "/user/profile": {
             "get": {
                 "security": [
@@ -421,6 +447,18 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "language.getLanguagesResponse": {
+            "description": "get languages getLanguagesResponse.",
+            "type": "object",
+            "properties": {
+                "languages": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
